--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         pattern: /^[A-Z]{1,3}\d{1,4}$/
       },
       VIC: {
-        url: "https://www.vicroads.vic.gov.au/registration/rego-check",
-        pattern: /^[A-Z]{3}\d{3}$/ // e.g. AXH950
-      },
+  url: "https://www.vicroads.vic.gov.au/registration/buy-sell-or-transfer-a-vehicle/check-vehicle-registration",
+  pattern: /^[A-Z]{3}\d{3}$/
+}
       QLD: {
         url: "https://www.qld.gov.au/transport/registration/check",
         pattern: /^[0-9]{3}[A-Z]{3}$|^[A-Z]{3}[0-9]{3}$/ // e.g. 123ABC or ABC123
