--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>Smart Vehicle Registration Checker (Australia)</h1>
-  <p>Enter your number plate below. If we can tell the state from the format, we'll redirect you to the right rego checker. If not, you'll be able to choose.</p>
+  <p>Enter your number plate below. If we can detect the state, we’ll redirect you there. If not, you can choose.</p>
 
   <input type="text" id="regoInput" placeholder="e.g. AXH950">
   <button onclick="checkRego()">Check Registration</button>
@@ -26,12 +26,12 @@
         pattern: /^[A-Z]{1,3}\d{1,4}$/
       },
       VIC: {
-  url: "https://www.vicroads.vic.gov.au/registration/buy-sell-or-transfer-a-vehicle/check-vehicle-registration",
-  pattern: /^[A-Z]{3}\d{3}$/
-}
+        url: "https://www.vicroads.vic.gov.au/registration/buy-sell-or-transfer-a-vehicle/check-vehicle-registration",
+        pattern: /^[A-Z]{3}\d{3}$/ // e.g. AXH950
+      },
       QLD: {
         url: "https://www.qld.gov.au/transport/registration/check",
-        pattern: /^[0-9]{3}[A-Z]{3}$|^[A-Z]{3}[0-9]{3}$/ // e.g. 123ABC or ABC123
+        pattern: /^[0-9]{3}[A-Z]{3}$|^[A-Z]{3}[0-9]{3}$/
       },
       SA: {
         url: "https://www.sa.gov.au/topics/driving-and-transport/registration/rego-check",
@@ -47,11 +47,11 @@
       },
       ACT: {
         url: "https://rego.act.gov.au/",
-        pattern: /^[Y]{1}[A-Z]{2}\d{2,3}$|^[A-Z]{3}\d{3}$/ // YAB123 or ABC123
+        pattern: /^[Y]{1}[A-Z]{2}\d{2,3}$|^[A-Z]{3}\d{3}$/
       },
       NT: {
         url: "https://nt.gov.au/driving/rego/check,-renew-or-transfer-registration/check-registration",
-        pattern: /^[CDEFGHJKLMNPRSTWXYZ]{1,3}\d{1,4}$/
+        pattern: /^[A-Z]{1,3}\d{1,4}$/
       }
     };
 
@@ -70,21 +70,21 @@
         .map(([state, info]) => ({ state, url: info.url }));
 
       if (matches.length === 0) {
-        result.innerHTML = `<p>We couldn’t detect a matching plate format. Please choose your state below:</p>`;
+        result.innerHTML = `<p>We couldn’t detect a matching state format. Please choose your state below:</p>`;
         result.innerHTML += makeStateList(Object.entries(states));
         return;
       }
 
       if (matches.length === 1) {
         const { state, url } = matches[0];
-        result.innerHTML = `<p>Detected <strong>${state}</strong> rego format. Redirecting you now…</p>`;
+        result.innerHTML = `<p>Detected <strong>${state}</strong> plate format. Redirecting...</p>`;
         setTimeout(() => {
           window.open(url, "_blank");
         }, 1000);
         return;
       }
 
-      result.innerHTML = `<p>This rego could belong to more than one state. Please choose:</p>`;
+      result.innerHTML = `<p>This plate matches multiple states. Please choose the correct one:</p>`;
       result.innerHTML += makeStateList(matches.map(m => [m.state, m.url]));
     }
 
