--- a/index.html
+++ b/index.html
@@ -1,113 +1,165 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>AU Smart Rego Checker</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Rego Checker | Australia</title>
+  <link rel="icon" type="image/png" href="https://i.imgur.com/tM2lY0B.png" />
+
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; }
-    input, button { font-size: 1.2rem; padding: 0.5rem; margin-top: 1rem; width: 100%; }
-    ul { margin-top: 1rem; }
-    li { margin-bottom: 0.5rem; }
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f0f2f5;
+      color: #212529;
+    }
+
+    header {
+      background-color: #0052cc;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    header img {
+      height: 40px;
+      vertical-align: middle;
+      margin-right: 10px;
+    }
+
+    main {
+      max-width: 600px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
+    }
+
+    input {
+      width: 100%;
+      font-size: 1.2rem;
+      padding: 0.75rem;
+      margin: 1rem 0;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    li {
+      margin: 0.75rem 0;
+      display: flex;
+      align-items: center;
+    }
+
+    li img {
+      width: 28px;
+      height: 28px;
+      margin-right: 10px;
+    }
+
+    a {
+      color: #007bff;
+      font-weight: bold;
+      text-decoration: none;
+      font-size: 1.05rem;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      main {
+        margin: 1rem;
+      }
+
+      li img {
+        width: 24px;
+        height: 24px;
+      }
+    }
   </style>
 </head>
 <body>
-  <h1>Smart Vehicle Registration Checker (Australia)</h1>
-  <p>Enter your number plate below. If we can detect the state, we’ll redirect you there. If not, you can choose.</p>
 
-  <input type="text" id="regoInput" placeholder="e.g. AXH950">
-  <button onclick="checkRego()">Check Registration</button>
-  <button onclick="copyRego()">Copy Rego</button>
+  <header>
+    <img src="https://i.imgur.com/tM2lY0B.png" alt="logo" />
+    <strong>Smart Rego Checker – Australia</strong>
+  </header>
 
-  <div id="result" style="margin-top: 2rem;"></div>
+  <main>
+    <p>Enter your number plate below. We'll copy it for you automatically and let you choose your state to check registration info.</p>
+
+    <input type="text" id="regoInput" placeholder="e.g. AXH950" />
+    <div id="result"></div>
+  </main>
 
   <script>
-    const states = {
+    const stateLinks = {
       NSW: {
         url: "https://check-registration.service.nsw.gov.au/?isLoginRequired=true",
-        pattern: /^[A-Z]{1,3}\d{1,4}$/
+        icon: "https://img.icons8.com/color/48/000000/new-south-wales.png"
       },
       VIC: {
         url: "https://www.vicroads.vic.gov.au/registration/buy-sell-or-transfer-a-vehicle/check-vehicle-registration/vehicle-registration-enquiry",
-        pattern: /^[A-Z]{3}\d{3}$/
+        icon: "https://img.icons8.com/color/48/000000/victoria.png"
       },
       QLD: {
-        url: "https://www.service.transport.qld.gov.au/checkrego/public/Welcome.xhtml",
-        pattern: /^[0-9]{3}[A-Z]{3}$|^[A-Z]{3}[0-9]{3}$/
+        url: "https://www.service.transport.qld.gov.au/checkrego/application/VehicleSearch.xhtml?dswid=-124",
+        icon: "https://img.icons8.com/color/48/000000/queensland.png"
       },
       SA: {
-        url: "https://account.ezyreg.sa.gov.au/account/check-registration.htm",
-        pattern: /^[A-Z]{3}\d{3}$/
+        url: "https://account.ezyreg.sa.gov.au/account/check-registration.htm#error=login_required&state=f766405e-5748-4874-84dd-25721daa5b10",
+        icon: "https://img.icons8.com/color/48/000000/south-australia.png"
       },
       WA: {
         url: "https://online.transport.wa.gov.au/webExternal/registration/",
-        pattern: /^[0-9]{1,6}$|^[A-Z]{1,3}\d{1,3}$/
+        icon: "https://img.icons8.com/color/48/000000/western-australia.png"
       },
       TAS: {
         url: "https://www.transport.tas.gov.au/MRSWebInterface/public/regoLookup/registrationLookup.xhtml",
-        pattern: /^[A-Z]{2,3}\d{1,3}$/
+        icon: "https://img.icons8.com/color/48/000000/tasmania.png"
       },
       ACT: {
         url: "https://rego.act.gov.au/regosoawicket/public/reg/FindRegistrationPage",
-        pattern: /^[Y]{1}[A-Z]{2}\d{2,3}$|^[A-Z]{3}\d{3}$/
+        icon: "https://img.icons8.com/color/48/000000/australian-capital-territory.png"
       },
       NT: {
         url: "https://nt.gov.au/driving/rego/existing-nt-registration/rego-check",
-        pattern: /^[A-Z]{1,3}\d{1,4}$/
+        icon: "https://img.icons8.com/color/48/000000/northern-territory.png"
       }
     };
 
-    function checkRego() {
-      const raw = document.getElementById('regoInput').value.trim().toUpperCase();
-      const result = document.getElementById('result');
-      result.innerHTML = "";
+    const input = document.getElementById('regoInput');
+    const result = document.getElementById('result');
 
-      if (!raw || raw.length < 2) {
-        result.innerHTML = "<p style='color:red;'>Please enter a valid registration number.</p>";
+    input.addEventListener('input', updateLinks);
+
+    function updateLinks() {
+      const rego = input.value.trim().toUpperCase();
+      if (!rego || rego.length < 2) {
+        result.innerHTML = "";
         return;
       }
 
-      const matches = Object.entries(states)
-        .filter(([_, info]) => info.pattern.test(raw))
-        .map(([state, info]) => ({ state, url: info.url }));
-
-      if (matches.length === 0) {
-        result.innerHTML = `<p>We couldn’t detect a matching state format. Please choose your state below:</p>`;
-        result.innerHTML += makeStateList(Object.entries(states), raw);
-        return;
-      }
-
-      if (matches.length === 1) {
-        const { state, url } = matches[0];
-        result.innerHTML = `<p>Detected <strong>${state}</strong> plate format. Redirecting...</p>`;
-        setTimeout(() => {
-          window.open(url, "_blank");
-        }, 1000);
-        return;
-      }
-
-      result.innerHTML = `<p>This plate matches multiple states. Please choose the correct one:</p>`;
-      result.innerHTML += makeStateList(matches.map(m => [m.state, m.url]), raw);
-    }
-
-    function makeStateList(list, rego) {
-      let html = "<ul>";
-      list.forEach(([state, url]) => {
-        html += `<li><a href="${url}" target="_blank">${state} Rego Check</a></li>`;
+      // Try to copy rego silently
+      navigator.clipboard.writeText(rego).catch(() => {
+        console.warn("Clipboard write failed — browser restrictions.");
       });
+
+      let html = "<h3>Select your state to check rego:</h3><ul>";
+      for (const [state, data] of Object.entries(stateLinks)) {
+        html += `<li><img src="${data.icon}" alt="${state} icon" /> <a href="${data.url}" target="_blank">${state} Rego Check</a></li>`;
+      }
       html += "</ul>";
-      return html;
-    }
-
-    function copyRego() {
-      const regoInput = document.getElementById('regoInput');
-      regoInput.select();
-      regoInput.setSelectionRange(0, 99999); // For mobile devices
-
-      navigator.clipboard.writeText(regoInput.value).then(() => {
-        alert("Registration number copied to clipboard.");
-      }, () => {
-        alert("Failed to copy registration number.");
-      });
+      result.innerHTML = html;
     }
   </script>
 </body>
