--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Smart Rego Checker | Australia</title>
-  <link rel="icon" href="https://i.imgur.com/tM2lY0B.png">
+  <link rel="icon" href="https://i.imgur.com/tM2lY0B.png" />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -12,14 +12,12 @@
       padding: 0;
       background: #f0f2f5;
     }
-
     header {
       background-color: #0052cc;
       color: white;
       padding: 1rem;
       text-align: center;
     }
-
     main {
       max-width: 600px;
       margin: 2rem auto;
@@ -28,21 +26,20 @@
       border-radius: 8px;
       box-shadow: 0 0 12px rgba(0,0,0,0.1);
     }
-
     input[type="text"] {
       width: 100%;
       padding: 1rem;
       font-size: 1.2rem;
       border: 1px solid #ccc;
       border-radius: 6px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
     }
-
     ul {
       list-style-type: none;
       padding: 0;
       margin-top: 1.5rem;
     }
-
     li {
       margin: 0.5rem 0;
       padding: 0.75rem 1rem;
@@ -51,32 +48,12 @@
       font-weight: bold;
       cursor: pointer;
       border-radius: 6px;
+      user-select: none;
+      transition: background-color 0.2s ease;
     }
-
     li:hover {
       background-color: #d0e4ff;
     }
-
-    #previewPanel {
-      display: none;
-      background: #f9f9f9;
-      border-left: 4px solid #007bff;
-      margin-top: 1.5rem;
-      padding: 1rem;
-      border-radius: 6px;
-    }
-
-    #previewPanel button {
-      margin-top: 1rem;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 0.75rem 1.25rem;
-      font-size: 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
     @media screen and (max-width: 600px) {
       main {
         margin: 1rem;
@@ -90,11 +67,11 @@
     <h1>Smart Rego Checker – Australia</h1>
   </header>
   <main>
-    <p>Enter your number plate below. We'll copy it automatically and let you choose your state to check it.</p>
-    <input type="text" id="regoInput" placeholder="e.g. AXH950">
+    <p>Enter your number plate below. It’ll be copied automatically and you can open a state rego checker directly.</p>
+    <input type="text" id="regoInput" placeholder="e.g. AXH950" autocomplete="off" autocorrect="off" autocapitalize="characters" spellcheck="false" />
     <div id="result"></div>
-    <div id="previewPanel"></div>
   </main>
+
   <script>
     const stateLinks = {
       VIC: "https://www.vicroads.vic.gov.au/registration/buy-sell-or-transfer-a-vehicle/check-vehicle-registration/vehicle-registration-enquiry",
@@ -107,41 +84,45 @@
       NT: "https://nt.gov.au/driving/rego/existing-nt-registration/rego-check"
     };
 
+    // States with URL autofill query parameter support
+    const autoFillStates = {
+      TAS: "rego"
+    };
+
     const input = document.getElementById("regoInput");
     const result = document.getElementById("result");
-    const preview = document.getElementById("previewPanel");
 
     input.addEventListener("input", () => {
-      const rego = input.value.trim().toUpperCase();
-      if (!rego || rego.length < 2) {
+      const regoRaw = input.value.trim().toUpperCase();
+      if (!regoRaw || regoRaw.length < 2) {
         result.innerHTML = "";
-        preview.style.display = "none";
         return;
       }
 
-      navigator.clipboard.writeText(rego).catch(() => {
-        console.warn("Clipboard copy failed.");
-      });
+      // Copy to clipboard silently
+      navigator.clipboard.writeText(regoRaw).catch(() => {});
 
-      let html = '<h3>Detected States:</h3><ul>';
-      for (const state of Object.keys(stateLinks)) {
-        html += `<li onclick="showPreview('${state}')">${state} Rego Check</li>`;
+      let html = '<h3>Click a state below to check your rego:</h3><ul>';
+      for (const [state, url] of Object.entries(stateLinks)) {
+        let link = url;
+        if (autoFillStates[state]) {
+          const param = autoFillStates[state];
+          if (url.includes("?")) {
+            const baseUrl = url.split("?")[0];
+            const queryString = url.split("?")[1].split("#")[0];
+            const hash = url.includes("#") ? "#" + url.split("#")[1] : "";
+            const params = new URLSearchParams(queryString);
+            params.set(param, regoRaw);
+            link = baseUrl + "?" + params.toString() + hash;
+          } else {
+            link = url + "?" + param + "=" + encodeURIComponent(regoRaw);
+          }
+        }
+        html += `<li onclick="window.open('${link}', '_blank')">${state} Rego Check</li>`;
       }
-      html += '</ul>';
+      html += "</ul>";
       result.innerHTML = html;
-      preview.style.display = "none";
     });
-
-    function showPreview(state) {
-      const rego = document.getElementById("regoInput").value.trim().toUpperCase();
-      const link = stateLinks[state];
-      preview.style.display = "block";
-      preview.innerHTML = `
-        <strong>${state} Registration Preview</strong>
-        <p>Your rego <code>${rego}</code> is ready to be searched on the official ${state} website.</p>
-        <button onclick="window.open('${link}', '_blank')">Continue to ${state} Site</button>
-      `;
-    }
   </script>
 </body>
 </html>
