--- a/index.html
+++ b/index.html
@@ -1,128 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Smart Rego Checker | Australia</title>
-  <link rel="icon" href="https://i.imgur.com/tM2lY0B.png" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f0f2f5;
-    }
-    header {
-      background-color: #0052cc;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Smart Rego Checker | Australia</title>
+<link rel="icon" href="https://i.imgur.com/tM2lY0B.png" />
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0; padding: 0;
+    background: #f0f2f5;
+  }
+  header {
+    background-color: #0052cc;
+    color: white;
+    padding: 1rem;
+    text-align: center;
+  }
+  main {
+    max-width: 600px;
+    margin: 2rem auto;
+    background: white;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 0 12px rgba(0,0,0,0.1);
+  }
+  input[type="text"] {
+    width: 100%;
+    padding: 1rem;
+    font-size: 1.2rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 1.5rem;
+  }
+  li {
+    margin: 0.5rem 0;
+    padding: 0.75rem 1rem;
+    background: #e9f2ff;
+    color: #0052cc;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 6px;
+    user-select: none;
+    transition: background-color 0.2s ease;
+  }
+  li:hover {
+    background-color: #d0e4ff;
+  }
+  @media screen and (max-width: 600px) {
     main {
-      max-width: 600px;
-      margin: 2rem auto;
-      background: white;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+      margin: 1rem;
+      padding: 1.5rem;
     }
-    input[type="text"] {
-      width: 100%;
-      padding: 1rem;
-      font-size: 1.2rem;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-      margin-top: 1.5rem;
-    }
-    li {
-      margin: 0.5rem 0;
-      padding: 0.75rem 1rem;
-      background: #e9f2ff;
-      color: #0052cc;
-      font-weight: bold;
-      cursor: pointer;
-      border-radius: 6px;
-      user-select: none;
-      transition: background-color 0.2s ease;
-    }
-    li:hover {
-      background-color: #d0e4ff;
-    }
-    @media screen and (max-width: 600px) {
-      main {
-        margin: 1rem;
-        padding: 1.5rem;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <header>
-    <h1>Smart Rego Checker – Australia</h1>
-  </header>
-  <main>
-    <p>Enter your number plate below. It’ll be copied automatically and you can open a state rego checker directly.</p>
-    <input type="text" id="regoInput" placeholder="e.g. AXH950" autocomplete="off" autocorrect="off" autocapitalize="characters" spellcheck="false" />
-    <div id="result"></div>
-  </main>
+<header>
+  <h1>Smart Rego Checker – Australia</h1>
+</header>
+<main>
+  <p>Enter your number plate below. It’ll be copied automatically and you can open a state rego checker directly.</p>
+  <input type="text" id="regoInput" placeholder="e.g. AXH950 or AXH950 V" autocomplete="off" autocorrect="off" autocapitalize="characters" spellcheck="false" />
+  <div id="result"></div>
+</main>
 
-  <script>
-    const stateLinks = {
-      VIC: "https://www.vicroads.vic.gov.au/registration/buy-sell-or-transfer-a-vehicle/check-vehicle-registration/vehicle-registration-enquiry",
-      NSW: "https://check-registration.service.nsw.gov.au/?isLoginRequired=true",
-      QLD: "https://www.service.transport.qld.gov.au/checkrego/application/VehicleSearch.xhtml?dswid=-124",
-      SA: "https://account.ezyreg.sa.gov.au/account/check-registration.htm#error=login_required&state=f766405e-5748-4874-84dd-25721daa5b10",
-      WA: "https://online.transport.wa.gov.au/webExternal/registration/",
-      TAS: "https://www.transport.tas.gov.au/MRSWebInterface/public/regoLookup/registrationLookup.xhtml",
-      ACT: "https://rego.act.gov.au/regosoawicket/public/reg/FindRegistrationPage",
-      NT: "https://nt.gov.au/driving/rego/existing-nt-registration/rego-check"
-    };
+<script>
+  // Official base URLs
+  const stateLinks = {
+    VIC: "https://www.vicroads.vic.gov.au/registration/buy-sell-or-transfer-a-vehicle/check-vehicle-registration/vehicle-registration-enquiry",
+    NSW: "https://check-registration.service.nsw.gov.au/?isLoginRequired=true",
+    QLD: "https://www.service.transport.qld.gov.au/checkrego/application/VehicleSearch.xhtml?dswid=-124",
+    SA: "https://account.ezyreg.sa.gov.au/account/check-registration.htm#error=login_required&state=f766405e-5748-4874-84dd-25721daa5b10",
+    WA: "https://online.transport.wa.gov.au/webExternal/registration/",
+    TAS: "https://www.transport.tas.gov.au/MRSWebInterface/public/regoLookup/registrationLookup.xhtml",
+    ACT: "https://rego.act.gov.au/regosoawicket/public/reg/FindRegistrationPage",
+    NT: "https://nt.gov.au/driving/rego/existing-nt-registration/rego-check"
+  };
 
-    // States with URL autofill query parameter support
-    const autoFillStates = {
-      TAS: "rego"
-    };
+  // Map single-letter codes to states (X = NT)
+  const letterToState = {
+    V: "VIC",
+    N: "NSW",
+    Q: "QLD",
+    S: "SA",
+    W: "WA",
+    T: "TAS",
+    A: "ACT",
+    X: "NT"
+  };
 
-    const input = document.getElementById("regoInput");
-    const result = document.getElementById("result");
+  const input = document.getElementById("regoInput");
+  const result = document.getElementById("result");
 
-    input.addEventListener("input", () => {
-      const regoRaw = input.value.trim().toUpperCase();
-      if (!regoRaw || regoRaw.length < 2) {
+  function buildStateList(rego) {
+    if (!rego || rego.length < 2) {
+      result.innerHTML = "";
+      return;
+    }
+    let html = '<h3>Click a state below to check your rego:</h3><ul>';
+    for (const [state, url] of Object.entries(stateLinks)) {
+      html += `<li onclick="window.open('${url}', '_blank')">${state} Rego Check</li>`;
+    }
+    html += '</ul>';
+    result.innerHTML = html;
+  }
+
+  input.addEventListener("input", () => {
+    let val = input.value.trim().toUpperCase();
+
+    // Copy rego portion silently, ignoring trailing state letter if present
+    let regoOnly = val;
+    let lastSpaceIndex = val.lastIndexOf(" ");
+    let possibleLetter = "";
+    if (lastSpaceIndex > -1) {
+      possibleLetter = val.slice(lastSpaceIndex + 1);
+      if (possibleLetter.length === 1 && letterToState[possibleLetter]) {
+        regoOnly = val.slice(0, lastSpaceIndex);
+      }
+    }
+
+    if (!regoOnly || regoOnly.length < 2) {
+      result.innerHTML = "";
+      return;
+    }
+
+    navigator.clipboard.writeText(regoOnly).catch(() => {});
+
+    // If input matches the pattern "REGO [state letter]" then open immediately
+    if (possibleLetter && letterToState[possibleLetter]) {
+      const state = letterToState[possibleLetter];
+      const url = stateLinks[state];
+      if (url) {
+        window.open(url, "_blank");
+        input.value = "";
         result.innerHTML = "";
         return;
       }
+    }
 
-      // Copy to clipboard silently
-      navigator.clipboard.writeText(regoRaw).catch(() => {});
-
-      let html = '<h3>Click a state below to check your rego:</h3><ul>';
-      for (const [state, url] of Object.entries(stateLinks)) {
-        let link = url;
-        if (autoFillStates[state]) {
-          const param = autoFillStates[state];
-          if (url.includes("?")) {
-            const baseUrl = url.split("?")[0];
-            const queryString = url.split("?")[1].split("#")[0];
-            const hash = url.includes("#") ? "#" + url.split("#")[1] : "";
-            const params = new URLSearchParams(queryString);
-            params.set(param, regoRaw);
-            link = baseUrl + "?" + params.toString() + hash;
-          } else {
-            link = url + "?" + param + "=" + encodeURIComponent(regoRaw);
-          }
-        }
-        html += `<li onclick="window.open('${link}', '_blank')">${state} Rego Check</li>`;
-      }
-      html += "</ul>";
-      result.innerHTML = html;
-    });
-  </script>
+    // Otherwise show the state list for manual click
+    buildStateList(regoOnly);
+  });
+</script>
 </body>
 </html>
