--- a/index.html
+++ b/index.html
@@ -102,14 +102,21 @@
     border: none;
     cursor: pointer;
     color: #0052cc;
-    font-weight: bold;
-    font-size: 1rem;
+    font-weight: 600;
+    font-size: 0.9rem;
     user-select: none;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    padding: 0;
   }
   .copyBtn:hover {
     color: #003d99;
   }
-
+  /* SVG icon styling */
+  .copyBtn svg {
+    stroke: currentColor;
+  }
   @media screen and (max-width: 720px) {
     main {
       flex-direction: column;
@@ -211,12 +218,48 @@
       const btn = document.createElement("button");
       btn.className = "copyBtn";
       btn.title = `Copy ${rego}`;
-      btn.innerHTML = "📋";
+      btn.innerHTML = `
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          style="margin-right: 6px;"
+          viewBox="0 0 24 24"
+        >
+          <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+          <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+        </svg>
+        Copy
+      `;
       btn.addEventListener("click", e => {
         e.stopPropagation();
         navigator.clipboard.writeText(rego).then(() => {
-          btn.textContent = "✅";
-          setTimeout(() => btn.textContent = "📋", 1000);
+          btn.innerHTML = "Copied!";
+          setTimeout(() => {
+            btn.innerHTML = `
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                style="margin-right: 6px;"
+                viewBox="0 0 24 24"
+              >
+                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+              </svg>
+              Copy
+            `;
+          }, 1500);
         });
       });
 
